--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,9 @@
 
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
+  <link rel="shortcut icon" href="/img/Fav/Fav64.png">
+  <link rel="apple-touch-icon" href="/img/Fav/Fav256.png" />
+
   <meta name="author" content="{{ site.author.name }}" />
 
   {% if page.subtitle %}
